# dw-church

./: .gitattributes  .gitignore  .railwayignore  CHANGELOG.md  CLAUDE.md  CUSTOM-DOMAINS.md  DW-Church-SaaS-Development-Plan-v2.0.md  Dockerfile.server  ELEMENTOR-CACHE-CLEAR-GUIDE.md  GITHUB-RELEASE-GUIDE.md  LOGIN-ISSUES.md  MIGRATION-GUIDE.md  MIGRATION.md  RAILWAY-DEPLOYMENT.md  README-TESTING.md  README.md  SETUP-DEVELOPMENT.md  TENANT-ISOLATION.md  TENANT-URL-ROUTING.md  TEST.md  UPDATE_GUIDE.md  Version-Update-Checklist.md  WORDPRESS-PLUGIN-AUTO-UPDATE-GUIDE.md  WORDPRESS-URL-FIX.md  build.ps1  build.sh  check-github-status.ps1  check-widget-version.php  clear-elementor-cache.php  clear-update-cache.php  composer.json  dasom-church-management.php  debug-banner-meta.php  docker-compose.yml  dw-church.php  force-reload-widgets.php  manual-migration.php  phpunit.xml.dist  railway.toml  readme.txt  (+12 more)
dw-church-app/apps/agents/: Dockerfile  pyproject.toml  railway.toml  requirements.txt
dw-church-app/apps/agents/app/: database.py  main.py
dw-church-app/apps/agents/app/adapters/: __init__.py  base.py
dw-church-app/apps/agents/app/agents/: __init__.py  base.py  designer.py  developer.py  orchestrator.py  planner.py  qa.py
dw-church-app/apps/agents/app/routers/: planner.py
dw-church-app/apps/agents/app/routers/projects/: __init__.py
dw-church-app/apps/agents/app/services/: adapter_factory.py  ai_service.py  block_id_service.py  image_service.py
dw-church-app/apps/agents/app/services/agents/: __init__.py
dw-church-app/apps/agents/app/services/agents/architect/: __init__.py  architect_agent.py  domain.py
dw-church-app/apps/agents/app/services/agents/business/: __init__.py  business_agent.py  domain.py
dw-church-app/apps/agents/app/services/agents/copywriter/: __init__.py  block_catalog.py  copywriter_agent.py  domain.py
dw-church-app/apps/agents/app/services/agents/design/: __init__.py  design_agent.py  domain.py
dw-church-app/apps/agents/app/services/agents/shared/: __init__.py  base_agent.py  church_content_reference.md  church_content_reference.py  church_voice.py  (+6 more)
dw-church-app/apps/agents/app/services/planner/: census_service.py  llm_service.py  site_crawler.py  spacing_core.py
dw-church-app/apps/agents/app/services/storage/: __init__.py  r2_service.py
dw-church-app/apps/agents/app/tests/: conftest.py  test_content_module_structure.py  test_planner_integration.py
dw-church-app/apps/agents/app/tests/integration/: test_orchestrator_routes.py  test_planner_routes_offline.py
dw-church-app/apps/agents/app/tests/unit/: test_block_id.py  test_image_no_text_rule.py
(+552 files in other folders)
