[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dw-church-agents"
version = "0.1.0"
description = "True Light — AI agent pipeline (Planner -> Designer -> Developer -> QA)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "anthropic>=0.49.0",
    "python-multipart>=0.0.9",
    # Local workspace package — adapter that talks to apps/server (Fastify).
    # Local install: pip install -e ../../packages/agents-adapter
    "dw-church-agents-adapter",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# N815 (mixedCase class vars) is intentional across models/routers —
# they mirror the frontend JSON contract (lineHeight, businessName, etc.).
# UP042 (StrEnum over str+Enum) is deliberately opt-out — switching would
# change serialization for already-persisted enum values.
ignore = ["N815", "UP042"]

[tool.ruff.lint.per-file-ignores]
# Tests use long assertion messages and descriptive fn names like
# test_render_header_external_item_sets_opensInNewTab.
"app/tests/**" = ["E501", "N802", "F841"]
# Large data literals (pattern templates, seed data, HTML templates, preset dicts).
"app/routers/planner.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Include the integration suite (app/tests) AND the per-agent unit
# suites (app/services/agents/tests). Phase 2 specialized agents live
# next to their source so the tests colocate with the class under
# test; without this entry the agent tests were silently uncollected
# by bare `pytest` even though explicit invocation worked, meaning
# regressions could ship despite green CI.
testpaths = ["app/tests", "app/services/agents/tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# Non-strict baseline — the codebase uses bare dict/list generics and
# untyped helpers pervasively. Turning on `strict = true` produced 473
# errors across 38 files (mostly type-arg / no-untyped-def pedantry),
# which effectively disabled mypy in CI. This config keeps the default
# checks (e.g. `union-attr`) that still surface real bugs.
check_untyped_defs = true
warn_unused_ignores = true
